tests/ui/methods/issue-19521.rs
fn main() {
    "".homura()(); //~ ERROR no method named `homura` found
}
